# session-types-experiment

./: .gitignore  .gitmodules
Coroutine-0.1.0.0/Control/: Coroutine.hs
Coroutine-0.1.0.0/Control/Monad/: Indexed.hs
effects-as-sessions/: cabal.project  effect-sessions.cabal
effects-as-sessions/Control/: Effect.hs
effects-as-sessions/Control/Effect/Sessions/: Operations.hs  Process.hs  Process.lhs
effects-as-sessions/Data/Type/: FiniteMap.hs  Set.hs
effects-as-sessions/example/: examples.hs  examples.lhs
full-sessions-0.6.2.1/: full-sessions.cabal
full-sessions-0.6.2.1/src/FullSession/: Base.hs
sessions-2008.7.18/: ChangeLog.txt  sessions.cabal
sessions-2008.7.18/Control/Concurrent/: Session.hs
sessions-2008.7.18/Control/Concurrent/Session/: Interleaving.hs  Pid.hs  Runtime.hs  SessionType.hs  SessionTypeMonad.hs  Types.hs
sessions-2008.7.18/Control/Concurrent/Session/Base/: Bool.hs  List.hs  Map.hs  Number.hs  SMonad.hs
sessions-2008.7.18/Control/Concurrent/Session/Network/: Socket.hs
sessions-2008.7.18/System/: Session.hs
sessions-2008.7.18/Tests/: Queens.hs  Speed.hs  TestNetwork.hs  Tests.hs
simple-sessions-0.1.3/: CHANGES  TODO  cabal.project  simple-sessions.cabal
simple-sessions-0.1.3/Control/Concurrent/SimpleSession/: Implicit.lhs  Positional.lhs  SessionTypes.lhs  TChan.lhs  UChan.lhs
simple-sessions-0.1.3/Control/Concurrent/SimpleSession/Examples/: Implicit.lhs  Positional.lhs
