cabal-version:      2.2
name:               full-sessions
version:            0.6.2.1
description:
  This library defines a @Session@ monad, which provides static checking of
  safe and consistent use of communication channels according to protocols.
  It requires almost no type- or term- annotations.
  Examples inculude a SMTP client and a simple chat client with its own protocol.
  Alternatives are: the simple-sessions package
  (<http://hackage.haskell.org/package/simple-sessions>) and the sessions
  package  (<http://hackage.haskell.org/package/sessions>).

synopsis:           a monad for protocol-typed network programming
category:           Control, Network
stability:          experimental
license:            BSD-3-Clause
license-file:       LICENSE
author:             Keigo IMAI
maintainer:         keigo.imai@gmail.com
homepage:
  http://www.agusa.i.is.nagoya-u.ac.jp/person/sydney/full-sessions.html

build-type:         Simple
extra-source-files:
  AUTHORS
  examples/Chatter.hs
  examples/client.hs
  examples/EnableGUI.hs
  examples/GuiChatter.hs
  examples/guiclient.hs
  examples/guiserver.hs
  examples/server.hs
  examples/smtp-client.hs
  README

library
  build-depends:
    , ghc      >6.10
    , network

  if impl(ghc >=6.10)
    build-depends: , base  >=4 && <5

  else
    build-depends: , base  >=3 && <4

  exposed-modules:    Control.Concurrent.FullSession
  other-modules:
    FullSession.Base
    FullSession.DeferredInstances
    FullSession.Ended
    FullSession.FullSession
    FullSession.Incoherent
    FullSession.NwSession
    FullSession.Recursion
    FullSession.SMonad
    FullSession.TypeAlgebra
    FullSession.TypeEq
    FullSession.Types

  hs-source-dirs:     src
  default-extensions:
    NoMonomorphismRestriction
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    KindSignatures
    MultiParamTypeClasses
    TypeFamilies
    TypeOperators
    UndecidableInstances
