cabal-version:      2.2
name:               simple-sessions
version:            0.1.3
license:            BSD-3-Clause
license-file:       LICENSE
stability:          experimental
author:             Jesse A. Tov <tov@eecs.harvard.edu>
maintainer:         tov@eecs.harvard.edu
homepage:
  http://www.eecs.harvard.edu/~tov/pubs/haskell-session-types/

category:           Control
synopsis:           A simple implementation of session types
build-type:         Simple
description:
  This library is based on the session types implementation
  from \"Haskell Session Types with (Almost) No Class,\" from
  the 2008 Haskell Symposium.  For a full-featured session types
  library, see the sessions package
  (<http://hackage.haskell.org/cgi-bin/hackage-scripts/package/sessions>).

extra-source-files:
  CHANGES
  Control/Concurrent/SimpleSession/Examples/Implicit.lhs
  Control/Concurrent/SimpleSession/Examples/Positional.lhs
  TODO

library
  build-depends:
    , base                  <5
    , indexed
    , synchronous-channels

  exposed-modules:
    Control.Concurrent.SimpleSession.Implicit
    Control.Concurrent.SimpleSession.Positional
    Control.Concurrent.SimpleSession.SessionTypes

  other-modules:
    Control.Concurrent.SimpleSession.TChan
    Control.Concurrent.SimpleSession.UChan
